--- a/CRUDReact/ClientApp/package.json
+++ b/CRUDReact/ClientApp/package.json
@@ -8,9 +8,13 @@
     "isomorphic-fetch": "^2.2.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "1.0.17",
     "reactstrap": "^5.0.0-beta.3",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.2.0",
     "rimraf": "^2.6.2"
   },
   "scripts": {
