--- a/CRUDReact/ClientApp/package.json
+++ b/CRUDReact/ClientApp/package.json
@@ -14,6 +14,8 @@
     "react-scripts": "1.0.17",
     "reactstrap": "^5.0.0-beta.3",
     "redux": "^4.0.0",
+    "redux-actions": "^2.3.2",
+    "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0",
     "rimraf": "^2.6.2"
   },
