--- a/CRUDReact/ClientApp/package.json
+++ b/CRUDReact/ClientApp/package.json
@@ -6,13 +6,13 @@
     "bootstrap": "^4.1.0",
     "history": "^4.7.2",
     "isomorphic-fetch": "^2.2.1",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
     "react-scripts": "1.0.17",
-    "reactstrap": "^5.0.0-beta.3",
+    "reactstrap": "^6.0.1",
     "redux": "^4.0.0",
     "redux-actions": "^2.3.2",
     "redux-promise": "^0.5.3",
@@ -24,5 +24,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-google": "^0.9.1",
+    "eslint-plugin-react": "^7.8.2"
   }
 }
