--- a/CRUDReact/ClientApp/package.json
+++ b/CRUDReact/ClientApp/package.json
@@ -15,6 +15,7 @@
     "reactstrap": "^6.0.1",
     "redux": "^4.0.0",
     "redux-actions": "^2.3.2",
+    "redux-form": "^7.3.0",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0",
     "rimraf": "^2.6.2"
